# cr_cpp_dynamic_export

./: .gitignore  CMakeLists.txt  Readme.md
.github/workflows/: ubuntu-latest.yml  windows-latest.yml
app/: CMakeLists.txt  main.cpp
mylibrary/: CMakeLists.txt  lib.cpp  lib.hpp  mylib.hpp
